--- a/web-app/src/index.scss
+++ b/web-app/src/index.scss
@@ -208,3 +208,13 @@ code {
         }
     }
 }
+
+.error-message{
+    width: 100vw;
+    color: red;
+    text-align: center;
+    font-size: 3rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
